feat(auth): adapt to the firebase auth
